--- a/layout/header.html
+++ b/layout/header.html
@@ -12,7 +12,12 @@
     <header>
         <div class="header">
             <img src="../assets/image/sorvete.png" alt="logo de nossa sorveteria">
-            <section class="conteiner"></section>
+            <section class="conteiner">
+
+                <a href=""><li>Inicial</li></a>
+
+                <a href=""><li>Feedback</li></a>
+            </section>
         </div>
     </header>
 </body>
