--- a/layout/header.css
+++ b/layout/header.css
@@ -26,3 +26,10 @@ li {
     display: inline-flex;
 }
 
+.conteiner {
+    gap: 50px;
+    list-style-type: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+}
+
