--- a/layout/header.css
+++ b/layout/header.css
@@ -38,3 +38,9 @@ a {
     text-decoration: none;
     padding: 20px;
 }
+
+a:hover {
+    color: black;
+    background-color: rgba(225, 225, 225, 0.489);
+    border: 10px;
+}
