--- a/layout/header.css
+++ b/layout/header.css
@@ -42,7 +42,7 @@ a {
 a:hover {
     color: black;
     background-color: rgba(225, 225, 225, 0.489);
-    border: 10px;
+    border-radius: 10px;
 }
 
 .header {
