--- a/layout/header.css
+++ b/layout/header.css
@@ -54,3 +54,17 @@ img {
     height: 100px;
     width: 100px;
 }
+
+img:hover {
+    width: 100px;
+    animation: rotation 2s infinite linear;
+  }
+
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }	
