--- a/layout/header.css
+++ b/layout/header.css
@@ -6,14 +6,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: ;
+    background-color: rgb(246, 235, 213);
 }
 
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: ;
+    background-color: rgb(216, 84, 83);
     margin-top: 10px;
     margin: 0;
     padding: 0;
@@ -32,6 +32,7 @@ li {
     list-style-type: none;
     font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
+    margin-top: 10px;
 }
 
 a {
@@ -58,15 +59,16 @@ img {
 }
 
 img:hover {
-    width: 6px;
+    width: 64px;
     animation: rotation 2s infinite linear;
-  }
+}
 
-  @keyframes rotation {
+@keyframes rotation {
     from {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     to {
-      transform: rotate(359deg);
+        transform: rotate(359deg);
     }
-  }	
+}
