--- a/layout/footer.html
+++ b/layout/footer.html
@@ -12,7 +12,8 @@
         <p>Todos os direitos reservados </p>
         <a href="https://linktr.ee/Eu__53?utm_source=linktree_profile_share&ltsid=f57019f5-2af7-4005-a68f-ee79205385c1"
             target="_blank">
-            <img src="../assets/image/" alt="">
+            <img src="../assets/image/white icon.png" alt="">
+            <a>
     </div>
 </footer>
 </head>
