--- a/layout/header.html
+++ b/layout/header.html
@@ -13,10 +13,16 @@
         <div class="header">
             <img src="../assets/image/sorvete.png" alt="logo de nossa sorveteria">
             <section class="conteiner">
+                <ul>
+                    <a href="">
+                        <li>Inicial</li>
+                    </a>
 
-                <a href=""><li>Inicial</li></a>
+                    <a href="">
+                        <li>Feedback</li>
+                    </a>
 
-                <a href=""><li>Feedback</li></a>
+                </ul>
             </section>
         </div>
     </header>
