--- a/assets/css/inicial.css
+++ b/assets/css/inicial.css
@@ -10,7 +10,7 @@ margin: 5%;}/*IMAGENS DO DEPOIMENTO*/
 
 #depart1{ display: flex;
 background-color: wheat;
-box-shadow:black;
+box-shadow: 10px 5px 5px black;
 margin: 1%;} /*Article 1 do Depiomento*/
 
 #dediv{ background-color: aqua;} /*DEPOIMENTO DIV*/
