--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -1,4 +1,6 @@
 #pa6{
+    display: flex;
+    flex-direction: column;
     margin: auto;
     width: 50%;
     margin-bottom: 10px;
@@ -7,7 +9,37 @@
     border: blanchedalmond;
     width: 50px;
     height: 50px;
+    background-color: #5a9a8c;
+    padding-left: 340px;
+    border-radius:10px;
+    margin-bottom: 10px;
 
 }
 .form{display: flex;
 flex-direction: column;}
+
+#pa2{
+    border-color: black;
+    margin-bottom: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+#pa1{
+    border-color: black;
+    outline:0;
+    margin-bottom:20px;
+    padding-top: 5px;
+    padding-bottom:5px ;
+}
+#pa3{
+    border-radius: 0;
+    margin-bottom:20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+body{
+    margin:0;
+    padding:0;
+    background-color:#d85453 ;
+}
