footer css final

--- a/layout/footer.html
+++ b/layout/footer.html
@@ -8,11 +8,11 @@
     <title>Footer</title>
 </head>
 <footer>
-    <div id="footer">
-        <p>Todos os direitos reservados </p>
+    <div id="footer1">
+        <p> © Todos os direitos reservados 2023 </p>
         <a href="https://linktr.ee/Eu__53?utm_source=linktree_profile_share&ltsid=f57019f5-2af7-4005-a68f-ee79205385c1"
             target="_blank">
-            <img src="../assets/image/white icon.png" alt="">
+            <img src="../assets/image/white icon.png" alt="logo do linktree" height="32px" widht="32px">
             <a>
     </div>
 </footer>
