--- a/layout/footer.css
+++ b/layout/footer.css
@@ -12,7 +12,9 @@ body {
     text-align: center;
     margin: auto;
     width: 100%;
-    height: 100%;
     position: fixed;
+    margin: 0;
+    bottom: 0;
+    left: 0;
 }
 
