--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -7,10 +7,8 @@
 }
 #pa4{
     border: blanchedalmond;
-    width: 50px;
     height: 50px;
     background-color: #5a9a8c;
-    padding-left: 340px;
     border-radius:10px;
     margin-bottom: 10px;
 
@@ -50,8 +48,8 @@ body{
     width:50%;
     margin-bottom: 10px;
 }
-#pa4:houver{
-    background-color: #f6ebd5;
+#pa4:hover{
+    background-color:#d85453;
 }
 p{
     text-align: center;
