--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -1,56 +1,66 @@
-#pa6{
+#pa6 {
     display: flex;
     flex-direction: column;
     margin: auto;
     width: 50%;
     margin-bottom: 10px;
 }
-#pa4{
+
+#pa4 {
     border: blanchedalmond;
     height: 50px;
     background-color: #5a9a8c;
-    border-radius:10px;
+    border-radius: 10px;
     margin-bottom: 10px;
 
 }
-.form{display: flex;
-flex-direction: column;}
 
-#pa2{
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+#pa2 {
     border-color: black;
     margin-bottom: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
-#pa1{
+
+#pa1 {
     border-color: black;
-    outline:0;
-    margin-bottom:20px;
+    outline: 0;
+    margin-bottom: 20px;
     padding-top: 5px;
-    padding-bottom:5px ;
+    padding-bottom: 5px;
 }
-#pa3{
+
+#pa3 {
     border-radius: 0;
-    margin-bottom:20px;
+    margin-bottom: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
 
 }
-body{
-    margin:0;
-    padding:0;
-    background-color:#d85453 ;
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color:#f6ebd5;
 }
-#pa6{
+
+#pa6 {
     display: flex;
     flex-direction: column;
     margin: auto;
-    width:50%;
+    width: 50%;
     margin-bottom: 10px;
 }
-#pa4:hover{
+
+#pa4:hover {
     background-color:#d85453;
 }
-p{
+
+p {
     text-align: center;
 }
