--- a/layout/header.html
+++ b/layout/header.html
@@ -10,19 +10,23 @@
 
 <body>
     <header>
+        <!--Divisória para mudanças gerais na header-->
         <div class="header">
             <img src="../assets/image/sorvete.png" alt="logo de nossa sorveteria">
+            <!--Section para a navegação entre as paginas-->
             <section class="conteiner">
-                <ul>
-                    <a href="">
-                        <li>Inicial</li>
-                    </a>
+                <nav>
+                    <ul>
+                        <a href="">
+                            <li>Inicial</li>
+                        </a>
 
-                    <a href="">
-                        <li>Feedback</li>
-                    </a>
+                        <a href="">
+                            <li>Feedback</li>
+                        </a>
 
-                </ul>
+                    </ul>
+                </nav>
             </section>
         </div>
     </header>
