link da page inicial

--- a/layout/header.html
+++ b/layout/header.html
@@ -17,7 +17,7 @@
             <section class="conteiner">
                 <nav>
                     <ul>
-                        <a href="">
+                        <a href="../pages/inicial.html">
                             <li>Inicial</li>
                         </a>
 
