--- a/layout/footer.html
+++ b/layout/footer.html
@@ -8,8 +8,11 @@
     <title>Footer</title>
 </head>
 <footer>
+    <!--Divisória para mudanças gerais no Footer-->
     <div id="footer1">
+        <!--Caixa de texto sobre direitos autorais-->
         <p> © Todos os direitos reservados 2023 </p>
+        <!--Imagem com o link do linktree-->
         <a href="https://linktr.ee/Eu__53?utm_source=linktree_profile_share&ltsid=f57019f5-2af7-4005-a68f-ee79205385c1"
             target="_blank">
             <img src="../assets/image/white icon.png" alt="logo do linktree" height="32px" widht="32px">
