--- a/layout/header.css
+++ b/layout/header.css
@@ -1,14 +1,15 @@
+/*Edição geral da Header*/
 * {
     margin: 0;
     padding: 0;
 }
-
+/*Edição do body */
 body {
     margin: 0;
     padding: 0;
     background-color: rgb(246, 235, 213);
 }
-
+/*Edição da Header com elementos em expecifico*/
 .header {
     display: flex;
     flex-direction: column;
@@ -18,7 +19,7 @@ body {
     margin: 0;
     padding: 0;
 }
-
+/*Edição geral da Lista de navegação*/
 li {
     list-style-type: none;
     font-family: 'Courier New', Courier, monospace;
@@ -26,7 +27,7 @@ li {
     display: inline-flex;
     margin-top: 20px;
 }
-
+/*Edição em expecifico da lista de navegação*/
 .conteiner {
     gap: 50px;
     list-style-type: none;
@@ -34,13 +35,13 @@ li {
     font-size: 20px;
     margin-top: 10px;
 }
-
+/*Edição grafica do texto*/
 a {
     color: white;
     text-decoration: none;
     padding: 25px;
 }
-
+/*Animações e transições do texto*/
 a:hover {
     color: black;
     background-color: rgba(225, 225, 225, 0.489);
