--- a/layout/header.css
+++ b/layout/header.css
@@ -48,7 +48,7 @@ a:hover {
     border-radius: 10px;
     transition: 2s;
 }
-
+/*Edição expecifica da Header*/
 .header {
     height: 175px   ;
     padding: 0 5%;
