--- a/layout/footer.css
+++ b/layout/footer.css
@@ -1,10 +1,12 @@
+/*Edição geral do Footer*/
 body {
     margin: 0;
     padding: 0;
 }
 
+/*Edição detalhada do Footer*/
 #footer1 {
-    background-color: rgb(216,84,83);
+    background-color: rgb(216, 84, 83);
     display: flex;
     flex-direction: column;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -17,4 +19,3 @@ body {
     bottom: 0;
     left: 0;
 }
-
