--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -1,3 +1,7 @@
+h1 {
+    text-align: center;
+}
+
 /*Estilização da section*/
 #pa6 {
     display: flex;
@@ -6,27 +10,32 @@
     width: 50%;
     margin-bottom: 10px;
 }
+
 /*Estilização do button*/
 #pa4 {
     border: blanchedalmond;
     height: 50px;
-    background-color: #5a9a8c;
+    background-color: #d85453;
     border-radius: 10px;
     margin-bottom: 10px;
 
 }
+
 /*Estilização do form*/
 .form {
     display: flex;
     flex-direction: column;
 }
+
 /*Estilização do input email*/
 #pa2 {
     border-color: black;
     margin-bottom: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
+    border-radius: 10px;
 }
+
 /*Estilização do input text*/
 #pa1 {
     border-color: black;
@@ -34,21 +43,25 @@
     margin-bottom: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
+    border-radius: 10px;
 }
+
 /*Estilização do input message*/
 #pa3 {
-    border-radius: 0;
+    border-radius: 10px;
     margin-bottom: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
 
 }
+
 /*Estilização do body*/
 body {
     margin: 0;
     padding: 0;
-    background-color:#f6ebd5;
+    background-color: #f6ebd5;
 }
+
 /*Estilização da section*/
 #pa6 {
     display: flex;
@@ -57,11 +70,18 @@ body {
     width: 50%;
     margin-bottom: 10px;
 }
+
 /*Colocação do houver*/
 #pa4:hover {
-    background-color:#d85453;
+    background-color: #5a9a8c;
+    box-shadow: 0 0 50px black;
 }
+
 /*Estilização do p para alinhamento*/
 p {
     text-align: center;
+}
+
+input:hover {
+    box-shadow: 0 0 50px black;
 }
