--- a/assets/css/inicial.css
+++ b/assets/css/inicial.css
@@ -7,3 +7,11 @@ body{
     height: 20%;
 }
 
+.article4{
+    border-top: 3px solid rgb(125,56,57);
+    border-radius: 5px;
+    margin: 25px;
+    padding: 25px;
+    box-shadow: 5px 5px 15px ;
+}
+
