--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,5 +10,12 @@ body{
 /*Promoção Especial*/
 #art1{
 background-color: #abccb9;
-display: flex;
+margin: 50px;
+padding: 50px;
+border-radius: 5px;
+box-shadow: 5px 5px 15px gray;
+border-left: 5px #599a8c;
+}
+#promoespecial{
+    display: flex;
 }
