--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,4 +22,9 @@ border-left: 5px #599a8c;
 }
 #textopromo{
     padding-left: 100px;
+    font-size: 25px;
+}
+#títulopromo{
+    display: flex;
+    flex-direction: column;
 }
