--- a/assets/css/inicial.css
+++ b/assets/css/inicial.css
@@ -8,15 +8,17 @@ body{
 }
 
 .article4{
-    border-top: 3px solid rgb(125,56,57);
+    display: flex;
     border-radius: 5px;
     margin: 25px;
     padding: 25px;
-    box-shadow: 5px 5px 15px rgb(218,145,117);
     background-color: rgb(246,235,213);
 }
 
-.imgsmarina{
-    
-}
+.img_text1{ display: flex;}
 
+.box{ box-shadow: 5px 5px 15px rgb(218,145,117);
+    border-top: 3px solid rgb(125,56,57);
+margin: 10px;}
+
+.box
