--- a/layout/header.html
+++ b/layout/header.html
@@ -17,11 +17,11 @@
             <section class="conteiner">
                 <nav>
                     <ul>
-                        <a href="../pages/inicial.html">
+                        <a href="../index.html" target="_parent">
                             <li>Inicial</li>
                         </a>
 
-                        <a href="../pages/feedback.html">
+                        <a href="../pages/feedback.html" target="_parent">
                             <li>Feedback</li>
                         </a>
 
