--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,69 @@
-body{
-    background-color:rgb(246,235,213);
- }
- 
- #imgsmarina{
-     width:20%;
-     height: 20%;
- }
- 
- .article4{
-     display: flex;
-     border-radius: 5px;
-     margin: 25px;
-     padding: 25px;
-     background-color: rgb(246,235,213);
- }
- 
- .img_text1{ display: flex;}
- 
- .box{ box-shadow: 5px 5px 15px rgb(218,145,117);
-     border-top: 3px solid rgb(125,56,57);
- margin: 10px;}
- 
- #titulosorvetes{
- text-align: center;
+body {
+    background-color: rgb(246, 235, 213);
+}
+
+#imgsmarina {
+    width: 20%;
+    height: 20%;
+    margin: 10px;
+}
+
+h3 {
+    margin: 10px    ;
+}
+.article4 {
+    display: flex;
+    border-radius: 5px;
+    margin: 25px;
+    padding: 25px;
+    background-color: rgb(246, 235, 213);
+}
+
+.img_text1 {
+    display: flex;
+}
+
+.box {
+    box-shadow: 5px 5px 15px rgb(218, 145, 117);
+    border-top: 3px solid rgb(125, 56, 57);
+    margin: 10px;
+    width: 50%;
+    height: 300px;
+}
+
+#titulosorvetes {
+    text-align: center;
     margin: 0;
     padding: 0;
     background-color: #f6ebd5;
 }
 
-#título{
+#título {
     text-align: center;
 }
+
 /*Promoção Especial*/
-#art1{
-background-color: #abccb9;
-margin: 50px;
-padding: 50px;
-border-radius: 5px;
-box-shadow: 5px 5px 15px gray;
-border-left: 5px #599a8c;
+#art1 {
+    background-color: #abccb9;
+    margin: 50px;
+    padding: 50px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
+    border-left: 5px #599a8c;
 }
+
 /*div da promoção especial para colocar o texto ao lado da imagem*/
-#promoespecial{
+#promoespecial {
     display: flex;
     justify-content: space-between;
 }
+
 /*edição do texto da produção*/
-#textopromo{
+#textopromo {
     padding-left: 100px;
     font-size: 25px;
 }
+
 iframe {
     margin: 0;
     padding: 0;
@@ -59,6 +73,7 @@ iframe {
     bottom: 0;
     margin-bottom: -3px;
 }
+
 /*DEPOIMENTO EM PARAGRAFO 1*/
 #dep1 {
     font-size: 200%;
@@ -83,6 +98,7 @@ iframe {
     box-shadow: 5px 5px 5px 5px grey;
     margin: 1%;
 }
+
 /*Article 1 do Depiomento*/
 .img_text {
     display: flex;
@@ -91,7 +107,8 @@ iframe {
 
 /*DEPOIMENTO DIV*/
 #dediv {
-    background-color: #abccb9;;
+    background-color: #abccb9;
+    ;
 }
 
 /*Nome dos depoimentores*/
@@ -102,7 +119,9 @@ iframe {
 }
 
 /* nome dos depoimentos*/
-.namesdepoimento{ text-align: center;}
+.namesdepoimento {
+    text-align: center;
+}
 
 #depart1:hover {
     transform: scale(1.05);
