--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body{
      border-radius: 5px;
      margin: 25px;
      padding: 25px;
-     background-color: rgb(246,235,213);
+     background-color: #abccb9;
  }
  
  .img_text1{ display: flex;}
