--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,12 +33,10 @@ h3 {
 }
 
 #titulosorvetes {
-    text-align: center;=======
-body{
+    text-align: center;
+}
+    
 
-    background-color:rgb(246,235,213);
- }
- 
  #imgsmarina{
      width:20%;
      height: 20%;
